# backend/public/swagger.json
@@ -283,6 +283,114 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"ProductItem": {
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					},
+					"image": {
+						"type": "string"
+					},
+					"categoryId": {
+						"type": "string"
+					},
+					"description": {
+						"type": "string"
+					},
+					"photo": {
+						"type": "string"
+					},
+					"price": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"id",
+					"name",
+					"image",
+					"categoryId",
+					"description",
+					"photo",
+					"price"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ProductItems": {
+				"properties": {
+					"items": {
+						"items": {
+							"$ref": "#/components/schemas/ProductItem"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"items"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"BaseResponse_ProductItems_": {
+				"properties": {
+					"data": {
+						"allOf": [
+							{
+								"$ref": "#/components/schemas/ProductItems"
+							}
+						],
+						"nullable": true
+					},
+					"error": {
+						"allOf": [
+							{
+								"$ref": "#/components/schemas/Error"
+							}
+						],
+						"nullable": true
+					}
+				},
+				"required": [
+					"data",
+					"error"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"IProductQueryRequest": {
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					},
+					"categoryId": {
+						"type": "string"
+					},
+					"limit": {
+						"type": "number",
+						"format": "double"
+					},
+					"offset": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"id",
+					"name",
+					"categoryId",
+					"limit",
+					"offset"
+				],
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {}
@@ -407,6 +515,35 @@
 						"application/json": {
 							"schema": {
 								"$ref": "#/components/schemas/ICategoryListRequest"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/v1/product/query": {
+			"post": {
+				"operationId": "Create",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/BaseResponse_ProductItems_"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/IProductQueryRequest"
 							}
 						}
 					}
